objects/SiteContracts__c/fields/E_Lights_QTY__c.field-meta.xml
<CustomField>
    <fullName>E_Lights_QTY__c</fullName>
    <label>E/Lights QTY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>