objects/SiteContracts__c/fields/EMAIL_ADDRESS__c.field-meta.xml
<CustomField>
    <fullName>EMAIL_ADDRESS__c</fullName>
    <label>Email Address</label>
    <type>Email</type>
</CustomField>