objects/SiteContracts__c/fields/Email_Inv__c.field-meta.xml
<CustomField>
    <fullName>Email_Inv__c</fullName>
    <label>Email Inv</label>
    <length>200</length>
    <type>Text</type>
</CustomField>