objects/SiteContracts__c/fields/Emergency_Light_Qty__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Light_Qty__c</fullName>
    <label>Emergency Light Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>