objects/SiteContracts__c/fields/EXPA_QTY__c.field-meta.xml
<CustomField>
    <fullName>EXPA_QTY__c</fullName>
    <label>EXPA QTY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>