objects/SiteContracts__c/fields/EXPANSION_MODULE__c.field-meta.xml
<CustomField>
    <fullName>EXPANSION_MODULE__c</fullName>
    <label>EXPANSION MODULE</label>
    <length>100</length>
    <type>Text</type>
</CustomField>