objects/SiteContracts__c/fields/EXT_SOU_QTY__c.field-meta.xml
<CustomField>
    <fullName>EXT_SOU_QTY__c</fullName>
    <label>EXT SOU QTY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>