objects/SiteContracts__c/fields/EXTERNAL_SOUNDERS__c.field-meta.xml
<CustomField>
    <fullName>EXTERNAL_SOUNDERS__c</fullName>
    <label>EXTERNAL SOUNDERS</label>
    <length>100</length>
    <type>Text</type>
</CustomField>