objects/SiteContracts__c/fields/FE_Total__c.field-meta.xml
<CustomField>
    <fullName>FE_Total__c</fullName>
    <formula>X6L_Water__c+X9L_Water__c+X3L_Water_Mist__c+X6L_Water_Mist__c+X9L_Water_Mist__c+X2L_AFFF__c+X3L_AFFF__c+X6L_AFFF__c+X9L_AFFF__c+X2KG_CO2__c+X5KG_CO2__c+X1KG_DRY_POWDER__c+X2KG_DRY_POWDER__c+X4KG_DRY_POWDER__c+X6KG_DRY_POWDER__c+X9KG_DRY_POWDER__c+X3L_WET_CHEMICAL__c+X6L_WET_CHEMICAL__c+X1_x_1m_Fire_Blanket__c+X1_2_x_1_2m_Fire_Blanket__c+X1_2_x_1_8m_Fire_Blanket__c+Hose_Reel_19mm__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FE Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>