objects/SiteContracts__c/fields/FIRE_BLA_QTY__c.field-meta.xml
<CustomField>
    <fullName>FIRE_BLA_QTY__c</fullName>
    <label>FIRE BLA QTY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>