objects/SiteContracts__c/fields/FIRE_BLANKET__c.field-meta.xml
<CustomField>
    <fullName>FIRE_BLANKET__c</fullName>
    <label>FIRE BLANKET</label>
    <length>100</length>
    <type>Text</type>
</CustomField>