objects/SiteContracts__c/fields/Fire_engineered__c.field-meta.xml
<CustomField>
    <fullName>Fire_engineered__c</fullName>
    <label>Fire engineered</label>
    <length>100</length>
    <type>Text</type>
</CustomField>