objects/SiteContracts__c/fields/First_Visit_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Visit_Date__c</fullName>
    <formula>IF ( AND(TEXT(Last_Completed_Visit__c) &lt;&gt; &quot;&quot;, NOT(ISBLANK(Number_of_Services__c))), 
Last_Completed_Visit__c +  IF ( Number_of_Services__c &lt;&gt; 0,( 365 / Number_of_Services__c ), 0)
, IF (  Next_Planned_Fire_Extinguisher_Visit__c &lt;&gt; NULL, Next_Planned_Fire_Extinguisher_Visit__c, NULL ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Visit Date</label>
    <type>Date</type>
</CustomField>