objects/SiteContracts__c/fields/Fixed_Price__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Price__c</fullName>
    <label>Fixed Price</label>
    <length>100</length>
    <type>Text</type>
</CustomField>