objects/SiteContracts__c/fields/Flow_Require__c.field-meta.xml
<CustomField>
    <fullName>Flow_Require__c</fullName>
    <label>Flow Require</label>
    <length>100</length>
    <type>Text</type>
</CustomField>