objects/SiteContracts__c/fields/Flow_Switch__c.field-meta.xml
<CustomField>
    <fullName>Flow_Switch__c</fullName>
    <label>Flow Switch</label>
    <length>100</length>
    <type>Text</type>
</CustomField>