objects/SiteContracts__c/fields/FOAM__c.field-meta.xml
<CustomField>
    <fullName>FOAM__c</fullName>
    <label>FOAM</label>
    <length>100</length>
    <type>Text</type>
</CustomField>