objects/SiteContracts__c/fields/FOAM_QTY__c.field-meta.xml
<CustomField>
    <fullName>FOAM_QTY__c</fullName>
    <label>FOAM QTY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>