objects/SiteContracts__c/fields/Fourth_Visit_Date__c.field-meta.xml
<CustomField>
    <fullName>Fourth_Visit_Date__c</fullName>
    <formula>If ( TEXT(Third_Visit_Date__c)  &lt;&gt; &quot;&quot;,  First_Visit_Date__c  + 3*( 365 / Number_of_Services__c ),NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fourth Visit Date</label>
    <type>Date</type>
</CustomField>