objects/SiteContracts__c/fields/GAS_SUPP_QTY__c.field-meta.xml
<CustomField>
    <fullName>GAS_SUPP_QTY__c</fullName>
    <label>GAS SUPP QTY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>