objects/SiteContracts__c/fields/GAS_SUPPRESSION__c.field-meta.xml
<CustomField>
    <fullName>GAS_SUPPRESSION__c</fullName>
    <label>GAS SUPPRESSION</label>
    <length>100</length>
    <type>Text</type>
</CustomField>