objects/SiteContracts__c/fields/GUARDING__c.field-meta.xml
<CustomField>
    <fullName>GUARDING__c</fullName>
    <label>GUARDING</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>