objects/SiteContracts__c/fields/HANDSET__c.field-meta.xml
<CustomField>
    <fullName>HANDSET__c</fullName>
    <label>HANDSET</label>
    <length>100</length>
    <type>Text</type>
</CustomField>