objects/SiteContracts__c/fields/HANDSET_QTY__c.field-meta.xml
<CustomField>
    <fullName>HANDSET_QTY__c</fullName>
    <label>HANDSET QTY</label>
    <length>100</length>
    <type>Text</type>
</CustomField>