objects/SiteContracts__c/fields/Heat_Detector_Qty__c.field-meta.xml
<CustomField>
    <fullName>Heat_Detector_Qty__c</fullName>
    <label>Heat Detector Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>