objects/SiteContracts__c/fields/Heat_Fix__c.field-meta.xml
<CustomField>
    <fullName>Heat_Fix__c</fullName>
    <label>Heat Fix</label>
    <length>100</length>
    <type>Text</type>
</CustomField>