objects/SiteContracts__c/fields/Heat_ROR__c.field-meta.xml
<CustomField>
    <fullName>Heat_ROR__c</fullName>
    <label>Heat ROR</label>
    <length>100</length>
    <type>Text</type>
</CustomField>