objects/SiteContracts__c/fields/Heat_ROR_QTY__c.field-meta.xml
<CustomField>
    <fullName>Heat_ROR_QTY__c</fullName>
    <label>Heat ROR QTY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>