objects/SiteContracts__c/fields/Hose_Reel_19mm__c.field-meta.xml
<CustomField>
    <fullName>Hose_Reel_19mm__c</fullName>
    <label>Hose Reel 19mm</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>