objects/SiteContracts__c/fields/HQ_Visit_Confirmation_Email__c.field-meta.xml
<CustomField>
    <fullName>HQ_Visit_Confirmation_Email__c</fullName>
    <formula>Site__r.HQ_Visit_Confirmation_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HQ Visit Confirmation Email</label>
    <type>Text</type>
</CustomField>