objects/SiteContracts__c/fields/HQ_Visits_Confirmation_Email__c.field-meta.xml
<CustomField>
    <fullName>HQ_Visits_Confirmation_Email__c</fullName>
    <label>HQ Visit Confirmation Email</label>
    <length>100</length>
    <type>Text</type>
</CustomField>