objects/SiteContracts__c/fields/INT_SOU_QTY__c.field-meta.xml
<CustomField>
    <fullName>INT_SOU_QTY__c</fullName>
    <label>INT SOU QTY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>