objects/SiteContracts__c/fields/Interfaces__c.field-meta.xml
<CustomField>
    <fullName>Interfaces__c</fullName>
    <label>Interfaces</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>