objects/SiteContracts__c/fields/Interfaces_QTY__c.field-meta.xml
<CustomField>
    <fullName>Interfaces_QTY__c</fullName>
    <label>Interfaces QTY</label>
    <length>100</length>
    <type>Text</type>
</CustomField>