objects/SiteContracts__c/fields/INTERNAL_SOUNDERS__c.field-meta.xml
<CustomField>
    <fullName>INTERNAL_SOUNDERS__c</fullName>
    <label>INTERNAL SOUNDERS</label>
    <length>100</length>
    <type>Text</type>
</CustomField>