objects/SiteContracts__c/fields/Ionisation__c.field-meta.xml
<CustomField>
    <fullName>Ionisation__c</fullName>
    <label>Ionisation</label>
    <length>100</length>
    <type>Text</type>
</CustomField>