objects/SiteContracts__c/fields/Ionisation_QTY__c.field-meta.xml
<CustomField>
    <fullName>Ionisation_QTY__c</fullName>
    <label>Ionisation QTY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>