objects/SiteContracts__c/fields/ITEM_tOTAL__c.field-meta.xml
<CustomField>
    <fullName>ITEM_tOTAL__c</fullName>
    <label>ITEM tOTAL</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>