objects/SiteContracts__c/fields/Job_Time__c.field-meta.xml
<CustomField>
    <fullName>Job_Time__c</fullName>
    <description>Assign the job time</description>
    <inlineHelpText>Job Time</inlineHelpText>
    <label>Job Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>