objects/SiteContracts__c/fields/Job_time_value__c.field-meta.xml
<CustomField>
    <fullName>Job_time_value__c</fullName>
    <description>Chose the job time values</description>
    <inlineHelpText>selecting the time value</inlineHelpText>
    <label>Time</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Minutes</fullName>
            </value>
            <value>
                <fullName>Hours</fullName>
            </value>
            <value>
                <fullName>Days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>