objects/SiteContracts__c/fields/JOB_TITLE__c.field-meta.xml
<CustomField>
    <fullName>JOB_TITLE__c</fullName>
    <label>Job Title</label>
    <length>100</length>
    <type>Text</type>
</CustomField>