objects/SiteContracts__c/fields/K_BOARD_QTY__c.field-meta.xml
<CustomField>
    <fullName>K_BOARD_QTY__c</fullName>
    <label>K/BOARD QTY</label>
    <length>100</length>
    <type>Text</type>
</CustomField>