objects/SiteContracts__c/fields/K_QTY__c.field-meta.xml
<CustomField>
    <fullName>K_QTY__c</fullName>
    <label>K QTY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>