objects/SiteContracts__c/fields/KEEPER__c.field-meta.xml
<CustomField>
    <fullName>KEEPER__c</fullName>
    <label>KEEPER</label>
    <length>100</length>
    <type>Text</type>
</CustomField>