objects/SiteContracts__c/fields/KEEPER_QTY__c.field-meta.xml
<CustomField>
    <fullName>KEEPER_QTY__c</fullName>
    <label>KEEPER QTY</label>
    <length>100</length>
    <type>Text</type>
</CustomField>