objects/SiteContracts__c/fields/Key_No__c.field-meta.xml
<CustomField>
    <fullName>Key_No__c</fullName>
    <label>Key No</label>
    <length>100</length>
    <type>Text</type>
</CustomField>