objects/SiteContracts__c/fields/KEYBOARD__c.field-meta.xml
<CustomField>
    <fullName>KEYBOARD__c</fullName>
    <label>KEYBOARD</label>
    <length>100</length>
    <type>Text</type>
</CustomField>