objects/SiteContracts__c/fields/KEYHOLDING__c.field-meta.xml
<CustomField>
    <fullName>KEYHOLDING__c</fullName>
    <label>KEYHOLDING</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>