objects/SiteContracts__c/fields/KEYPAD__c.field-meta.xml
<CustomField>
    <fullName>KEYPAD__c</fullName>
    <label>KEYPAD</label>
    <length>100</length>
    <type>Text</type>
</CustomField>