objects/SiteContracts__c/fields/KEYSW_QTY__c.field-meta.xml
<CustomField>
    <fullName>KEYSW_QTY__c</fullName>
    <label>KEYSW QTY</label>
    <length>100</length>
    <type>Text</type>
</CustomField>