objects/SiteContracts__c/fields/KEYSWITCH__c.field-meta.xml
<CustomField>
    <fullName>KEYSWITCH__c</fullName>
    <label>KEYSWITCH</label>
    <length>100</length>
    <type>Text</type>
</CustomField>