objects/SiteContracts__c/fields/Keyswitch_Qty__c.field-meta.xml
<CustomField>
    <fullName>Keyswitch_Qty__c</fullName>
    <label>Keyswitch Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>