objects/SiteContracts__c/fields/L_2_FA_QTY__c.field-meta.xml
<CustomField>
    <fullName>L_2_FA_QTY__c</fullName>
    <label>L/2/FA QTY</label>
    <length>100</length>
    <type>Text</type>
</CustomField>