objects/SiteContracts__c/fields/Labour_Charge__c.field-meta.xml
<CustomField>
    <fullName>Labour_Charge__c</fullName>
    <inlineHelpText>Charge rate per hour in hours.</inlineHelpText>
    <label>Labour Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>