objects/SiteContracts__c/fields/Labour_OOH_Charge__c.field-meta.xml
<CustomField>
    <fullName>Labour_OOH_Charge__c</fullName>
    <label>Labour OOH Charge</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Hourly Based</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>