objects/SiteContracts__c/fields/Labour_Out_of_Hour_Charge__c.field-meta.xml
<CustomField>
    <fullName>Labour_Out_of_Hour_Charge__c</fullName>
    <inlineHelpText>Labour Charge per hour out of hours.</inlineHelpText>
    <label>Labour OOH Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>