objects/SiteContracts__c/fields/Last_Completed_Visit__c.field-meta.xml
<CustomField>
    <fullName>Last_Completed_Visit__c</fullName>
    <inlineHelpText>Calculated from Visits, the next visit date of any type that is completed.</inlineHelpText>
    <label>Last Completed Visit</label>
    <summarizedField>Visits__c.Actual_Service_Date__c</summarizedField>
    <summaryFilterItems>
        <field>Visits__c.Visit_Complete__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Visits__c.Site_Contract__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>