objects/SiteContracts__c/fields/Layout_Drg_Reference__c.field-meta.xml
<CustomField>
    <fullName>Layout_Drg_Reference__c</fullName>
    <label>Layout Drg Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>