objects/SiteContracts__c/fields/LINKED_TO_FIRE_ALARM__c.field-meta.xml
<CustomField>
    <fullName>LINKED_TO_FIRE_ALARM__c</fullName>
    <label>LINKED TO FIRE ALARM</label>
    <length>100</length>
    <type>Text</type>
</CustomField>