objects/SiteContracts__c/fields/Linked_To_Int_Alarm__c.field-meta.xml
<CustomField>
    <fullName>Linked_To_Int_Alarm__c</fullName>
    <label>Linked To Int Alarm</label>
    <length>100</length>
    <type>Text</type>
</CustomField>