objects/SiteContracts__c/fields/M_Senser__c.field-meta.xml
<CustomField>
    <fullName>M_Senser__c</fullName>
    <label>M/Senser</label>
    <length>100</length>
    <type>Text</type>
</CustomField>