objects/SiteContracts__c/fields/M_Senser_QTY__c.field-meta.xml
<CustomField>
    <fullName>M_Senser_QTY__c</fullName>
    <label>M/Senser QTY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>