objects/SiteContracts__c/fields/MAGLOCK__c.field-meta.xml
<CustomField>
    <fullName>MAGLOCK__c</fullName>
    <label>MAGLOCK</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>