objects/SiteContracts__c/fields/MAGLOCK_QTY__c.field-meta.xml
<CustomField>
    <fullName>MAGLOCK_QTY__c</fullName>
    <label>MAGLOCK QTY</label>
    <length>100</length>
    <type>Text</type>
</CustomField>