objects/SiteContracts__c/fields/MAINT_PO_EXPIRES__c.field-meta.xml
<CustomField>
    <fullName>MAINT_PO_EXPIRES__c</fullName>
    <label>MAINT PO EXPIRES</label>
    <length>200</length>
    <type>Text</type>
</CustomField>