objects/SiteContracts__c/fields/MAINT_PO_NO__c.field-meta.xml
<CustomField>
    <fullName>MAINT_PO_NO__c</fullName>
    <label>MAINT PO NO</label>
    <length>200</length>
    <type>Text</type>
</CustomField>