objects/SiteContracts__c/fields/MAINTENANCE__c.field-meta.xml
<CustomField>
    <fullName>MAINTENANCE__c</fullName>
    <description>all contents copied to site contract service charge</description>
    <label>TO DELETE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>