objects/SiteContracts__c/fields/Maintenance_PO__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_PO__c</fullName>
    <label>Maintenance PO</label>
    <length>100</length>
    <type>Text</type>
</CustomField>