objects/SiteContracts__c/fields/Mandatory__c.field-meta.xml
<CustomField>
    <fullName>Mandatory__c</fullName>
    <label>Mandatory</label>
    <length>100</length>
    <type>Text</type>
</CustomField>