objects/SiteContracts__c/fields/MOBILE__c.field-meta.xml
<CustomField>
    <fullName>MOBILE__c</fullName>
    <label>Mobile</label>
    <length>100</length>
    <type>Text</type>
</CustomField>