objects/SiteContracts__c/fields/MONITOR__c.field-meta.xml
<CustomField>
    <fullName>MONITOR__c</fullName>
    <label>MONITOR</label>
    <length>100</length>
    <type>Text</type>
</CustomField>