objects/SiteContracts__c/fields/MONITOR_QTY__c.field-meta.xml
<CustomField>
    <fullName>MONITOR_QTY__c</fullName>
    <label>MONITOR QTY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>