objects/SiteContracts__c/fields/MONITORING__c.field-meta.xml
<CustomField>
    <fullName>MONITORING__c</fullName>
    <label>MONITORING</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>