objects/SiteContracts__c/fields/MUX_QTY__c.field-meta.xml
<CustomField>
    <fullName>MUX_QTY__c</fullName>
    <label>MUX QTY</label>
    <length>100</length>
    <type>Text</type>
</CustomField>