objects/SiteContracts__c/fields/Next_Planned_Fire_Extinguisher_Visit__c.field-meta.xml
<CustomField>
    <fullName>Next_Planned_Fire_Extinguisher_Visit__c</fullName>
    <inlineHelpText>Calculated from Visits, the next visit date of any type that is not yet completed. This includes Call-Outs.</inlineHelpText>
    <label>Next Planned Visit Date</label>
    <summarizedField>Visits__c.Actual_Service_Date__c</summarizedField>
    <summaryFilterItems>
        <field>Visits__c.Visit_Complete__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Visits__c.Site_Contract__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>