objects/SiteContracts__c/fields/Next_Planned_Service_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Planned_Service_Date__c</fullName>
    <inlineHelpText>This only looks at scheduled Services.</inlineHelpText>
    <label>Next Planned Service Date</label>
    <summarizedField>Visits__c.Actual_Service_Date__c</summarizedField>
    <summaryFilterItems>
        <field>Visits__c.Visit_Complete__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Visits__c.Visit_Type__c</field>
        <operation>equals</operation>
        <value>Service</value>
    </summaryFilterItems>
    <summaryForeignKey>Visits__c.Site_Contract__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>