objects/SiteContracts__c/fields/NO_1ST_iTEMS__c.field-meta.xml
<CustomField>
    <fullName>NO_1ST_iTEMS__c</fullName>
    <label>NO 1ST iTEMS</label>
    <length>100</length>
    <type>Text</type>
</CustomField>