objects/SiteContracts__c/fields/NO_ITEMS__c.field-meta.xml
<CustomField>
    <fullName>NO_ITEMS__c</fullName>
    <label>NO ITEMS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>