objects/SiteContracts__c/fields/No_Loop_QTY__c.field-meta.xml
<CustomField>
    <fullName>No_Loop_QTY__c</fullName>
    <label>No Loop QTY</label>
    <length>100</length>
    <type>Text</type>
</CustomField>