objects/SiteContracts__c/fields/No_of_Loops__c.field-meta.xml
<CustomField>
    <fullName>No_of_Loops__c</fullName>
    <label>No of Loops</label>
    <length>100</length>
    <type>Text</type>
</CustomField>