objects/SiteContracts__c/fields/No_of_Zones__c.field-meta.xml
<CustomField>
    <fullName>No_of_Zones__c</fullName>
    <label>No of Zones</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>