objects/SiteContracts__c/fields/No_of_Zones_QTY__c.field-meta.xml
<CustomField>
    <fullName>No_of_Zones_QTY__c</fullName>
    <label>No of Zones QTY</label>
    <length>100</length>
    <type>Text</type>
</CustomField>