objects/SiteContracts__c/fields/NOMINAL__c.field-meta.xml
<CustomField>
    <fullName>NOMINAL__c</fullName>
    <label>NOMINAL</label>
    <length>100</length>
    <type>Text</type>
</CustomField>