objects/SiteContracts__c/fields/Number_of_Completed_Visits__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Completed_Visits__c</fullName>
    <label>Number of Completed Visits</label>
    <summaryFilterItems>
        <field>Visits__c.Visit_Complete__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Visits__c.Call_Out_Types__c</field>
        <operation>equals</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>Visits__c.Site_Contract__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>