objects/SiteContracts__c/fields/Number_of_Open_Visits_with__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Open_Visits_with__c</fullName>
    <inlineHelpText>Shows the number of open visits that are not included in the Number of Open Visits field, due to having a P/O.</inlineHelpText>
    <label>Number of Open Visits - with P/O</label>
    <summaryFilterItems>
        <field>Visits__c.Visit_Complete__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Visits__c.Cancelled__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Visits__c.Purchase_Order__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Visits__c.Visit_Type__c</field>
        <operation>equals</operation>
        <value>Service</value>
    </summaryFilterItems>
    <summaryForeignKey>Visits__c.Site_Contract__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>