objects/SiteContracts__c/fields/Number_of_Services__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Services__c</fullName>
    <defaultValue>1</defaultValue>
    <inlineHelpText>Number of Visits per year, the Visits auto reschedule, based on this field.</inlineHelpText>
    <label>Number of Services</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>