objects/SiteContracts__c/fields/Office_Notes_2__c.field-meta.xml
<CustomField>
    <fullName>Office_Notes_2__c</fullName>
    <label>Office Notes 2</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>