objects/SiteContracts__c/fields/OFFICE_NOTES__c.field-meta.xml
<CustomField>
    <fullName>OFFICE_NOTES__c</fullName>
    <label>OFFICE NOTES</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>