objects/SiteContracts__c/fields/Office_Staff__c.field-meta.xml
<CustomField>
    <fullName>Office_Staff__c</fullName>
    <label>Office Staff</label>
    <length>50</length>
    <type>Text</type>
</CustomField>