objects/SiteContracts__c/fields/Office_Staff_Email__c.field-meta.xml
<CustomField>
    <fullName>Office_Staff_Email__c</fullName>
    <label>Office Staff Email</label>
    <type>Email</type>
</CustomField>