objects/SiteContracts__c/fields/Offshore__c.field-meta.xml
<CustomField>
    <fullName>Offshore__c</fullName>
    <formula>TEXT(Site__r.UK_Related__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If this Site is labelled as Offshore, this will show here.</inlineHelpText>
    <label>Offshore</label>
    <type>Text</type>
</CustomField>