objects/SiteContracts__c/fields/Online_Maint_option__c.field-meta.xml
<CustomField>
    <fullName>Online_Maint_option__c</fullName>
    <label>Online Maint option</label>
    <length>100</length>
    <type>Text</type>
</CustomField>