objects/SiteContracts__c/fields/Optical__c.field-meta.xml
<CustomField>
    <fullName>Optical__c</fullName>
    <label>Optical</label>
    <length>100</length>
    <type>Text</type>
</CustomField>