objects/SiteContracts__c/fields/Optical_QTY__c.field-meta.xml
<CustomField>
    <fullName>Optical_QTY__c</fullName>
    <label>Optical QTY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>