objects/SiteContracts__c/fields/Other_Detect__c.field-meta.xml
<CustomField>
    <fullName>Other_Detect__c</fullName>
    <label>Other Detect</label>
    <length>100</length>
    <type>Text</type>
</CustomField>