objects/SiteContracts__c/fields/Other_Detect_QTY__c.field-meta.xml
<CustomField>
    <fullName>Other_Detect_QTY__c</fullName>
    <label>Other Detect QTY</label>
    <length>100</length>
    <type>Text</type>
</CustomField>