objects/SiteContracts__c/fields/Other_QTY__c.field-meta.xml
<CustomField>
    <fullName>Other_QTY__c</fullName>
    <label>Other QTY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>