objects/SiteContracts__c/fields/PA_BUTTON__c.field-meta.xml
<CustomField>
    <fullName>PA_BUTTON__c</fullName>
    <label>PA BUTTON</label>
    <length>100</length>
    <type>Text</type>
</CustomField>