objects/SiteContracts__c/fields/PA_QTY__c.field-meta.xml
<CustomField>
    <fullName>PA_QTY__c</fullName>
    <label>PA QTY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>