objects/SiteContracts__c/fields/PANEL__c.field-meta.xml
<CustomField>
    <fullName>PANEL__c</fullName>
    <label>PANEL</label>
    <length>100</length>
    <type>Text</type>
</CustomField>