objects/SiteContracts__c/fields/PANEL_QTY__c.field-meta.xml
<CustomField>
    <fullName>PANEL_QTY__c</fullName>
    <label>PANEL QTY</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>