objects/SiteContracts__c/fields/Parent_from_Site__c.field-meta.xml
<CustomField>
    <fullName>Parent_from_Site__c</fullName>
    <formula>HYPERLINK (  IF(Site__r.ParentId&lt;&gt;&quot;&quot;,&quot;/&quot;&amp;Site__r.ParentId,&quot;&quot;) , Site__r.Parent.Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the parent account, as listed on the Site.</inlineHelpText>
    <label>Parent ( from Site )</label>
    <type>Text</type>
</CustomField>