objects/SiteContracts__c/fields/Per_Hose_Reel__c.field-meta.xml
<CustomField>
    <fullName>Per_Hose_Reel__c</fullName>
    <inlineHelpText>Charge per unit - you must have a value in the Per Fire Extinguisher, Per Fire Blanket and Per Fire Hose Reel fields.</inlineHelpText>
    <label>Per Hose Reel</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>