objects/SiteContracts__c/fields/PER_ITEM__c.field-meta.xml
<CustomField>
    <fullName>PER_ITEM__c</fullName>
    <inlineHelpText>Charge per unit - you must have a value in the Per Fire Extinguisher, Per Fire Blanket and Per Fire Hose Reel fields.</inlineHelpText>
    <label>Per Fire Extinguisher</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>