objects/SiteContracts__c/fields/Per_Portable_Appliance__c.field-meta.xml
<CustomField>
    <fullName>Per_Portable_Appliance__c</fullName>
    <label>Per Portable Appliance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>