objects/SiteContracts__c/fields/Per_Suppression_System__c.field-meta.xml
<CustomField>
    <fullName>Per_Suppression_System__c</fullName>
    <label>Per Suppression System</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>