objects/SiteContracts__c/fields/Period__c.field-meta.xml
<CustomField>
    <fullName>Period__c</fullName>
    <description>Field used in sage</description>
    <label>Period</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>