objects/SiteContracts__c/fields/PIR__c.field-meta.xml
<CustomField>
    <fullName>PIR__c</fullName>
    <label>PIR</label>
    <length>100</length>
    <type>Text</type>
</CustomField>