objects/SiteContracts__c/fields/PIR_QTY__c.field-meta.xml
<CustomField>
    <fullName>PIR_QTY__c</fullName>
    <label>PIR QTY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>