objects/SiteContracts__c/fields/PostCode__c.field-meta.xml
<CustomField>
    <fullName>PostCode__c</fullName>
    <label>PostCode</label>
    <length>100</length>
    <type>Text</type>
</CustomField>