objects/SiteContracts__c/fields/POWER_QTY__c.field-meta.xml
<CustomField>
    <fullName>POWER_QTY__c</fullName>
    <label>POWER QTY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>