objects/SiteContracts__c/fields/POWER_SUPPLIES__c.field-meta.xml
<CustomField>
    <fullName>POWER_SUPPLIES__c</fullName>
    <label>POWER SUPPLIES</label>
    <length>100</length>
    <type>Text</type>
</CustomField>