objects/SiteContracts__c/fields/PR_ADD1__c.field-meta.xml
<CustomField>
    <fullName>PR_ADD1__c</fullName>
    <label>PR ADD1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>