objects/SiteContracts__c/fields/PR_ADD2__c.field-meta.xml
<CustomField>
    <fullName>PR_ADD2__c</fullName>
    <label>PR ADD2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>