objects/SiteContracts__c/fields/PR_ADD3__c.field-meta.xml
<CustomField>
    <fullName>PR_ADD3__c</fullName>
    <label>PR ADD3</label>
    <length>100</length>
    <type>Text</type>
</CustomField>