objects/SiteContracts__c/fields/PR_POST_CODE__c.field-meta.xml
<CustomField>
    <fullName>PR_POST_CODE__c</fullName>
    <label>PR POST CODE</label>
    <length>100</length>
    <type>Text</type>
</CustomField>