objects/SiteContracts__c/fields/Pressure_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Pressure_Requirement__c</fullName>
    <label>Pressure Requirement</label>
    <length>100</length>
    <type>Text</type>
</CustomField>